--- a/04-kube-prometheus/01-manifests/prometheus-adapter-roleBindingAuthReader.yaml
+++ b/04-kube-prometheus/01-manifests/prometheus-adapter-roleBindingAuthReader.yaml
@@ -1,8 +1,7 @@
----
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: metrics-server-auth-reader
+  name: resource-metrics-auth-reader
   namespace: kube-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -10,5 +9,5 @@ roleRef:
   name: extension-apiserver-authentication-reader
 subjects:
 - kind: ServiceAccount
-  name: metrics-server
-  namespace: kube-system
+  name: prometheus-adapter
+  namespace: monitoring
